--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_ip_adapter_info
-description: Flutter plugin for getting `IP_ADAPTER_INFO` in windows.
+description: Gets information like macAddress or ipAddress from `IP_ADAPTER_INFO`
 version: 1.0.0
 homepage: https://github.com/prepola/flutter_ip_adapter_info
 
